                                   __
                       _ __ ___   / _|  ___  _ __ ___
                      | '_ ` _ \ | |_  / _ \| '_ ` _ \
                      | | | | | ||  _||  __/| | | | | |
                      |_| |_| |_||_|   \___||_| |_| |_|

                               http://mfem.org


Development version 3.3.1, not released
=======================================

- Added a mesh optimization miniapp, Mesh Optimizer, that is based on the target
  matrix optimization paradigm (TMOP). It is supported by a set of classes that
  represent mesh quality metrics, their first and second derivatives.

- Modified the installation layout: all headers, except the master headers
  (mfem.hpp and mfem-performance.hpp), are installed in <PREFIX>/include/mfem;
  the master headers are installed in both <PREFIX>/include/mfem and in
  <PREFIX>/include. The mfem configuration and testing makefiles (config.mk and
  test.mk) are installed in <PREFIX>/share/mfem, instead of <PREFIX>.

- Added SUNDIALS version of example 16/16p.

- Added optional support for the STRUMPACK parallel sparse direct solver and
  preconditioner. STRUMPACK uses Hierarchically Semi-Separable (HSS) compression
  in a fully algebraic manner, with interface similar to SuperLU_DIST. See
  http://portal.nersc.gov/project/sparse/strumpack for more details.

- Added a new macro, MFEM_VERSION, defined as a single integer of the form
  (major*100 + minor)*100 + patch. The new convention is that an even number
  (i.e. even patch number) denotes a "release" version, while an odd number
  denotes a "development" version. See config/config.hpp.in.

- Memory optimizations in the NCMesh class, which now uses 50% less memory.
  The average cost of an NC element in a uniformly refined mesh (including the
  refinement hierarchy, but excluding the temporary face_list and edge_list)
  is now only about 290 bytes. This also makes the class faster.
